updates new logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Ashley Oliveira</title>
 
         <!-- For favicon png -->
-		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+		<link rel="shortcut icon" type="image/icon" href="assets/logo/xshlxy.png"/>
        
         <!--font-awesome.min.css-->
         
