--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
-			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
 			                    <li class="smooth-menu"><a href="#projects">projects</a></li>
-			                    <li class="smooth-menu"><a href="#certs">certifications</a></li>
-			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
+			                    <li class="smooth-menu"><a href="#certifications">certifications</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
